# consilium_tempus

./: .gitignore
ct-be/: Cargo.toml  test.http
ct-be/src/: auth.rs  main.rs  reference_data.rs  tasks.rs  users.rs  utils.rs
ct-fe/: package-lock.json  package.json  vite.config.ts
ct-fe/src/: App.svelte
ct-fe/src/components/General/: PrivateRouteGuard.svelte  Select.svelte
ct-fe/src/components/Home/: Home.svelte
ct-fe/src/components/Login/: Login.svelte  Register.svelte  SignInBase.svelte
ct-fe/src/components/Logout/: Logout.svelte
ct-fe/src/components/MainMenu/: MainMenu.svelte
ct-fe/src/components/Task/: NewTask.svelte  TaskColumn.svelte  TaskList.svelte  TaskView.svelte  TaskViewDraggable.svelte  TaskViewPreview.svelte  TaskViewPreviewBase.svelte
ct-fe/src/lib/services/: api.ts  auth.ts
ct-fe/src/lib/stores/: refdata.ts  task.ts  user.ts
ct-fe/src/lib/types/: cttypes.type.ts
